--- a/haruhi/public/index.html
+++ b/haruhi/public/index.html
@@ -10,8 +10,7 @@
 	<div id="myapp"></div>
 	<script>
 		var app = Elm.Main.init({
-			node: document.getElementById('myapp'),
-			flags: { "domain": "https://test.midas.home.arpa" }
+			node: document.getElementById('myapp')
 		});
 	</script>
 </body>
