--- a/haruhi/public/index.html
+++ b/haruhi/public/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 	<meta charset="UTF-8">
 	<title>Main</title>
 	<script src="main.js"></script>
+	<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
