要素を一覧のページ作成

--- a/haruhi/public/index.html
+++ b/haruhi/public/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Main</title>
-	<script src="main.js"></script>
-	<link href="main.css" rel="stylesheet" type="text/css">
+	<script src="/main.js"></script>
+	<link href="/main.css" rel="stylesheet" type="text/css">
 	<link href="/sanctum/csrf-cookie" rel="stylesheet" type="text/css">
 </head>
 
